--- a/casino/packages/american-roulette/config.json
+++ b/casino/packages/american-roulette/config.json
@@ -10,7 +10,7 @@
     "source_path": "src",
     "namespace": "Packages\\AmericanRoulette\\",
     "static": {},
-    "purchase_url": "https://codecanyon.net/item/american-roulette-addon-for-stake-casino-gaming-platform/25861124",
+    "purchase_url": "https://adabet.io/item/american-roulette-addon-for-stake-casino-gaming-platform/25861124",
     "min_app_version": "1.19.0",
     "hash": "e8dfc8fce9e56b93ea89e17d2ed163b9"
 }
